update user and  campaign change ui and create share new  componet formdetail .

--- a/panel/src/app/campaign/addcampaign/addcampaign.component.html
+++ b/panel/src/app/campaign/addcampaign/addcampaign.component.html
@@ -2,113 +2,133 @@
   <div fxFlex.gt-sm="100" fxFlex="100">
       <mat-card>
           <mat-card-content>
-              <mat-grid-list cols="4" rowHeight="40px">
-                  <mat-grid-tile [colspan]=3>
-                      <mat-card-title>{{tag_label}}</mat-card-title>
-                  </mat-grid-tile>
-                  <mat-grid-tile>
-                    <button mat-raised-button color="primary" (click)="Close()"><mat-icon>close</mat-icon></button>
-                  </mat-grid-tile>
-                </mat-grid-list>
+              
               <!-- ============================================================== -->
               <!-- column -->
               <!-- ============================================================== -->
               <form class="basic-form" (ngSubmit)="onSubmit()" #AddCampaignForm="ngForm">
               <div fxLayout="row" fxLayoutWrap="wrap">
                   <!-- column -->
-                  <mat-grid-list cols="2" rowHeight="100px">
-                      <mat-grid-tile>
-                
-                    <mat-form-field>
-                      <input matInput placeholder="Enter Campaign" [(ngModel)]="cdata.name" name="name">
-                    </mat-form-field>
+                  <mat-grid-list cols="4" rowHeight="100px">
+                  <mat-grid-tile [colspan]="1">
+                    <div class="div-info">
+                      <mat-form-field>
+                        <input matInput placeholder="Enter Campaign" [(ngModel)]="cdata.name" name="name">
+                      </mat-form-field>
+                    </div>
                   </mat-grid-tile>
                   <mat-grid-tile>
+                      <div class="div-info">
                     <mat-form-field  *ngIf="foundsupplier">
                         <mat-select placeholder="Select Supplier" [(ngModel)]="cdata.id_provider" name="provider">
                           <mat-option value="option">Select Supplier</mat-option>
                           <mat-option *ngFor="let s of supplier" [value]="s.value">{{s.label}}</mat-option>
                         </mat-select>
                       </mat-form-field>
+                      </div>
                     </mat-grid-tile>
                     <mat-grid-tile>
+                        <div class="div-info">
                     <mat-form-field *ngIf="foundmessage">
                         <mat-select placeholder="Select Message" [(ngModel)]="cdata.id_message" name="message">
                           <mat-option value="-1">Select Message</mat-option>
                           <mat-option *ngFor="let m of message" [value]="m.value">{{m.label}}</mat-option>
                         </mat-select>
                       </mat-form-field>
+                      </div>
                   </mat-grid-tile>
+
                   <mat-grid-tile>
+                      <div class="div-info">
                   <mat-form-field>
                       <input matInput placeholder="Display ANI / Caller ID" [(ngModel)]="cdata.cid" name="cid">
                     </mat-form-field>
+                    </div>
                     </mat-grid-tile>
                     <mat-grid-tile>
                        <!-- column -->
+                       <div class="div-info">
                       <mat-form-field>
                         <input matInput placeholder="Maximum Call Ring Time" name="ringtime" [(ngModel)]="cdata.ringtime" type="number" min="1" max="60">
                       </mat-form-field>
-                    </mat-grid-tile>
+                    </div>
+                        </mat-grid-tile>
+                   
                     <!-- column -->
                     <mat-grid-tile>
+                        <div class="div-info">
                         <mat-form-field>
                           <input matInput placeholder="Maximum Call Answer Time" name="answertime" [(ngModel)]="cdata.answertime" type="number" min="1" max="60">
                         </mat-form-field>
-                      
+                        </div>
                       </mat-grid-tile>
                        
                       <mat-grid-tile>
-                  
+                          <div class="div-info">
                       <mat-form-field>
                           <input matInput placeholder="Total number of Ports allowed" name="channel" [(ngModel)]="cdata.channel" type="number" min="1" max="50">
                         </mat-form-field>
+                        </div>
                         </mat-grid-tile>
                         <mat-grid-tile>
+                            <div class="div-info">
 
                       <mat-form-field>
                         <input matInput type="number" min="1" max="60" name="ppm" placeholder="Dialing per Minutes" [(ngModel)]="cdata.ppm">
                       </mat-form-field>
+                      </div>
                 
                         </mat-grid-tile>
                         <mat-grid-tile>
+                            <div class="div-info">
                           <mat-form-field>
                               <input matInput type="date" placeholder="Choose a Start Date" name="startdate" [(ngModel)]="cdata.startdate">
                               
                             </mat-form-field>
+                          </div>
                         </mat-grid-tile>
                         <mat-grid-tile>
-                      <mat-form-field>
-                          <input matInput placeholder="Select Start Hours" name="starthr" type="number" min="0" max="23" value="0" [(ngModel)]="cdata.starthr" id="starthr" name="starthr">
-                        </mat-form-field>
+                        <div class="div-info">
+                            <mat-form-field>
+                                <input matInput placeholder="Select Start Hours" name="starthr" type="number" min="0" max="23" value="0" [(ngModel)]="cdata.starthr" id="starthr" name="starthr">
+                              </mat-form-field>
+                      </div>
                           </mat-grid-tile>
                           <mat-grid-tile>
+                              <div class="div-info">
                               <mat-form-field>
                                   <input matInput placeholder="Select Start Minutes" name="startmin" type="number" min="0" max="59" value="0" [(ngModel)]="cdata.startmin" id="startmin" name="startmin">
                               </mat-form-field>
-                        
+                        </div>
                           </mat-grid-tile>
                           <mat-grid-tile>
+                              <div class="div-info">
                               <mat-form-field>
                                   <input matInput type="date" placeholder="Choose a End Date" name="enddate" [(ngModel)]="cdata.enddate">
                                 </mat-form-field>
+                                </div>
                             </mat-grid-tile>
                             <mat-grid-tile>
-
+                                <div class="div-info">
                       <mat-form-field>
                           <input matInput placeholder="Select End Hours" type="number" name="endhr" min="0" max="23" value="23" [(ngModel)]="cdata.endhr" id="endhr" name="endhr">
                         </mat-form-field>
+                        </div>
                 
                             </mat-grid-tile>
                             <mat-grid-tile  class="padding">
+                                <div class="div-info">
                                 <mat-form-field>
                                     <input matInput placeholder="Select End Minutes" type="number" name="endmin" min="0" max="59" value="59" [(ngModel)]="cdata.endmin" id="endmin" name="endmin">
                                 </mat-form-field>
+                                </div>
                             </mat-grid-tile>
                             <mat-grid-tile class="padding">
+                                <div class="div-info">
                               <mat-form-field>
                           <textarea matInput placeholder="Campaign Descriptions" name="description" [(ngModel)]="cdata.description" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"></textarea>
                       </mat-form-field>
+                      </div>
                             </mat-grid-tile>
 
                  </mat-grid-list>
