--- a/panel/src/app/message/message/message.component.html
+++ b/panel/src/app/message/message/message.component.html
@@ -1,5 +1,7 @@
 
-<div fxLayout="row">
+<FormDetail [dataservice]="data" (close)="onClose($event)"></FormDetail>
+
+<div fxLayout="row" *ngIf="state">
   <div fxFlex.gt-sm="100%" >
       <app-addmessage></app-addmessage> 
   </div>
