--- a/panel/src/app/supplier/supplier/supplier.component.html
+++ b/panel/src/app/supplier/supplier/supplier.component.html
@@ -1,5 +1,6 @@
+<FormDetail [dataservice]="data" (close)="onClose($event)"></FormDetail>
 
-<div fxLayout="row">
+<div fxLayout="row" *ngIf="state">
   <div fxFlex.gt-sm="100%" >
       <app-addsupplier></app-addsupplier>
   </div>
